# LifeBridge

./: .env.template  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  FASTAPI_TEMPLATE_IMPROVEMENTS.md  FEATURES.md  IMPROVEMENTS.md  LICENSE  Makefile  QUICKSTART.md  README.md  START_HERE.md  TEST_PLAN.md  TRANSFORMATION_COMPLETE.md  create_image.py  docker-compose.yml  pyproject.toml  repro_ocr.py  reproduce_issue.py  reproduce_issue.sh  run_smoke.sh  test_api.sh  test_trans.js
.github/workflows/: full-test-suite.yml  lint.yml  test.yml
apps/api/: Dockerfile  alembic.ini  check_keys.py  check_models.py  entrypoint.sh  list_models.py  requirements.txt  test_attorney.py  test_ddg.py  test_gemini.py  test_name_search.py  test_search.py
apps/api/alembic/: README  env.py
apps/api/app/: create_image.py  main.py
apps/api/tests/: conftest.py  test_attorneys.py  test_cases.py  test_demo.py  test_health.py
apps/docgen/: Dockerfile  requirements.txt
apps/docgen/app/: main.py
apps/docgen/tests/: test_pdf.py
apps/tracker-api/: .coverage  Dockerfile  requirements.txt
apps/tracker-api/app/: main.py  models.py  pdf_service.py
apps/tracker-api/tests/: conftest.py  test_endpoints.py  test_full_regression.py  test_pdf.py  test_schemas.py  test_uscis.py  test_uscis_edge.py
apps/web/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  page.tsx  (+1 more)
docs/: ROADMAP.md  STRATEGY.md
infra/railway/: README.md
(+71 files in other folders)
